Fix deprecations, add hint for debugging JS
git-svn-id: https://localhost/svn/CounterManager/trunk@8535 7754d8ab-9b54-e011-a251-0001c006bdc7